# openrecall

./: README.md  openrecall  pyproject.toml  setup.py.old
docs/: hardware.md
src/: __init__.py  app.py  database.py  screenshot.py
src/openrecall/: __main__.py  app.py  database.py  nlp.py  ocr.py  recall.py  screenshot.py  utils.py
