    [build-system]
    requires = ["setuptools>=61.0.0"] # Or your chosen build backend
    build-backend = "setuptools.build_meta" # Or your chosen build backend's meta

    [project]
    name = "openrecall"
    version = "0.8.1"
    description = "Openrecall fork beta alpha software tested only on Linux."
    authors = [{name = "koenvaneijk", email = "mail@datatalk.be"}]
    maintainers = [{name = "Richard Horan", email = "richard@webhoran.com"}]
    readme = {file = "README.md" , content-type = "text/markdown"}
    license = "AGPL-3.0-only"
    # Add other metadata like readme, license, classifiers, etc.
    requires-python = ">=3.11"
    dependencies = [
            "Flask==3.0.3",
            "numpy==1.26.4",
            "mss==10.0.0",
            "sentence-transformers==3.0.0",
            "torch==2.6.0",
            "torchvision>=0.17.0",
            "shapely==2.0.4",
            "h5py==3.11.0",
            "rapidfuzz==3.9.3",
            "Pillow==10.3.0",
    ]
    
    
    [project.optional-dependencies]        
    win = [
                "pywin32 ; platform_system == 'Windows'",
                "psutil ; platform_system == 'Windows'",
                ]
   # mac = ["pyobjc==10.3 ; platform_system == 'Darwin'"]
    
    search = [ "python-doctr" ] # @ git+https://github.com/koenvaneijk/doctr.git@af711bc04eb8876a7189923fb51ec44481ee18cd"
    [project.urls]
    Repository = "https://www.github.com/richard378/openrecall.git"

    [tool.setuptools.packages.find]
    where = ["src"]
    exclude = ["tests"]
    namespaces = false
        
    [project.scripts]
    openrecall = "openrecall"
